<resources>
    <string name="app_name">DictionarySocial</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="do_you_have_a_account">Do you have a account?</string>
    <string name="go_to_login"><u>Go to login.</u> </string>
    <string name="you_don_t_have_a_account"><u>You don\'t have a account?</u></string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_this_is_social_dictionary"> <u>Welcome</u>,This is Social Dictionary</string>
</resources>