<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <Button
        android:id="@+id/title_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/app_bar_background"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
    <ImageView
        android:id="@+id/logoImage"
        android:layout_marginTop="100dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/title_Button"
        android:src="@drawable/dictionary"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/logoImage"
        android:padding="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="100dp">

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/button_background"/>
        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/signin_button"
            android:layout_width="match_parent"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/button_background"
            android:layout_height="wrap_content"/>


    </LinearLayout>
</RelativeLayout>