<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:id="@+id/title_Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:background="@drawable/app_bar_background"
        >
        <TextView
            android:text="Register"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:gravity="center"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_Button"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:text="@string/welcome_this_is_social_dictionary"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_margin="15dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <!--=========================================-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/custom_email_icon"
                android:drawablePadding="10dp"
                android:hint="E-mail"
                android:inputType="textEmailAddress"
                android:textColorHint="#E5E5E5" />

        </com.google.android.material.textfield.TextInputLayout>
        <!--=========================================-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/custom_username_icon"
                android:drawablePadding="10dp"
                android:hint="Username"

                android:inputType="text"
                android:textColorHint="#E5E5E5" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--=========================================-->

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/custom_password_icon"
                android:drawablePadding="10dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColorHint="#E5E5E5" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--=========================================-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_check_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/custom_password_icon"
                android:drawablePadding="10dp"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:textColorHint="#E5E5E5" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--=========================================-->

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="Register"
            android:textStyle="bold" />
        <!--=========================================-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/do_you_have_a_account" />

            <TextView
                android:id="@+id/go_tologin_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:text="@string/go_to_login"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>




</RelativeLayout>